<resources>
    <string name="app_name">app dyslex</string>
    <string name="texto_prueba">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                                in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                                sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <string name="c_lingúísticas">Competencias Lingüísticas</string>

    <string name="c_alfabetica">Competencia Alfabética</string>
    <string name="c_fonica">Competencia Fónica</string>
    <string name="c_silabica">Competencia Silábica</string>
    <string name="c_lexica">Competencia Léxica</string>
    <string name="c_sintactica">Competencia Sintáctica</string>
    <string name="c_semantica">Competencia Semántica</string>
    <string name="c_ortografica">Competencia Ortográfica</string>

    <string name="c_m_trabajo">Competencias Memoria de Trabajo</string>

    <string name="c_m_t_visual">Memoria de trabajo visual</string>
    <string name="c_m_t_s_visual">Memoria de trabajo secuencial visual</string>
    <string name="c_m_t_auditiva">Memoria de trabajo auditiva</string>
    <string name="c_m_t_s_auditiva">Memoria de trabajo secuencial auditiva</string>

    <string name="c_f_e_ejecutivas">Competencias Funciones Ejecutivas</string>

    <string name="c_a_dividida">Competencia Atención dividida</string>
    <string name="c_a_sostenida">Competencia Atención sostenida</string>
    <string name="c_a_selectiva">Competencia Atención selectiva</string>

    <string name="c_r_d">Competencias Rendimiento o Desempeño</string>

    <string name="c_o_a_v_escritura">Ortografía Arbitraria y Velocidad de Escritura</string>
    <string name="c_r_c_errores">Reconocimiento y corrección de errores</string>


    <string name="c_lateralidad">Competencias de Lateralidad</string>

    <string name="lateralidad_1">Lateralidad 1</string>
    <string name="lateralidad_2">Lateralidad 2</string>

    <string name="rendimientoDesempeño">Rendimiento o Desempeño</string>

    <string name="velocidadLectura">Velocidad de lectura</string>
    <string name="comprensionLectura">Comprensión de lectura</string>
    <string name="reconocimientoErrores">Reconocimiento de Errores</string>
    <string name="ortografiaArbitraria">Ortografía arbitraria y velocidad de escritura</string>

    <string name="Instrucciones">Instrucciones</string>
</resources>