<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".competenciasLinguisticas.Competencias_Linguisticas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/c_lingúísticas"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnc_alfabetica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_alfabetica">

                </Button>

                <Button
                    android:id="@+id/btnc_fonica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_fonica">

                </Button>

                <Button
                    android:id="@+id/btnc_silabica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_silabica">
                </Button>

                <Button
                    android:id="@+id/btnc_lexica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_lexica">

                </Button>

                <Button
                    android:id="@+id/btnc_sintactica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_sintactica">
                </Button>

                <Button
                    android:id="@+id/btnc_semantica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_semantica">
                </Button>

                <Button
                    android:id="@+id/btnc_ortografica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/c_ortografica">
                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSalirCompetenciasLinguisticas"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="menu" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>