<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".rendimientoDesempeño.Competencias_Rendimiento_Desempeno">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/rendimientoDesempeño"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnVelocidadLectura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/velocidadLectura">

        </Button>

        <Button
            android:id="@+id/btnComprensionLectura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/comprensionLectura">

        </Button>

        <Button
            android:id="@+id/btnReconocimientoErrores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reconocimientoErrores">

        </Button>

        <Button
            android:id="@+id/btnOrtografiaArbitraria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ortografiaArbitraria">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenuRDesempeño"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="menú" />

        <Space
            android:layout_width="50dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/btnSiguienteRDesempeño"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="Siguiente" />
    </LinearLayout>

</LinearLayout>