<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".memoriaDeTrabajo.Competencia_Memoria_Trabajo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="Nivel 2"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_mvisual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/c_m_t_visual">

        </Button>

        <Button
            android:id="@+id/btn_msvisual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/c_m_t_s_visual">

        </Button>

        <Button
            android:id="@+id/btn_mauditiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/c_m_t_auditiva">

        </Button>

        <Button
            android:id="@+id/btn_msauditiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/c_m_t_s_auditiva"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenuMemoria"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Menu" />
    </LinearLayout>


</LinearLayout>