<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".funcionesEjecutivas.Competencias_Funciones_Ejecutivas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/c_f_e_ejecutivas"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnAtencionDividida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/c_a_dividida">
        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnAtencionSelectiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/c_a_selectiva">
        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnAtencionSostenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/c_a_sostenida">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenuFuncionesEjecutivas"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="menu" />

    </LinearLayout>


</LinearLayout>